k8s/workloads/kapowarr/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapowarr
  labels:
    app: kapowarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kapowarr
  template:
    metadata:
      labels:
        app: kapowarr
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: kapowarr
          image: mrcas/kapowarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5656
          volumeMounts:
            - name: data
              mountPath: /comics-1
              subPath: comics
            - name: data
              mountPath: /app/temp_downloads
              subPath: downloads
            - name: config
              mountPath: /app/db
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: v1
kind: Service
metadata:
  name: kapowarr
spec:
  ports:
    - port: 80
      targetPort: 5656
  selector:
    app: kapowarr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kapowarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kapowarr.remini.site`)
      kind: Rule
      services:
        - name: kapowarr
          port: 80
